--- a/COVID-2019-Challenge_v.1.0.ipynb
+++ b/COVID-2019-Challenge_v.1.0.ipynb
@@ -15,8 +15,6 @@
     "import numpy as np\n",
     "from xgboost import XGBRegressor\n",
     "from sklearn import metrics\n",
-    "import catboost\n",
-    "import lightgbm\n",
     "\n",
     "\n",
     "plt.rcParams['figure.figsize'] = [40, 40]\n",
@@ -47,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading data for countries and removing unnecesary columns\n",
+    "\"\"\" Loading data for countries and removing unnecesary columns \"\"\"\n",
+    "\n",
+    "\n",
     "countries = pd.read_csv(\"./datasets/countries.csv\")\n",
     "countries.drop(['iso_alpha2', 'iso_numeric', 'name', 'official_name'], axis='columns', inplace=True)"
    ]
@@ -936,8 +936,7 @@
     }
    ],
    "source": [
-    "\"\"\"Merge dataframes and count days from first confirmed\n",
-    "\"\"\"\n",
+    "\"\"\"Merge dataframes and count days from first confirmed\"\"\"\n",
     "\n",
     "\n",
     "data_all_2 = data_all_2.merge(data_days, how='left',\n",
@@ -1125,6 +1124,8 @@
     "Create validation set for a model\n",
     "Three countries will be dropped from train set for validation\n",
     "\"\"\"\n",
+    "\n",
+    "\n",
     "features = ['density', 'median_age', 'urban_pop_rate',\n",
     "            'date_first_confirmed', 'prev_day_confirmed', 'prev_day_deaths']\n",
     "labels = ['iso_alpha3', 'date', 'confirmed', 'deaths']\n",
@@ -1154,13 +1155,11 @@
    "source": [
     "\"\"\"Used models:\n",
     "XGBRegressor - xgb\n",
-    "CatBoostRegressor - cbr\n",
-    "LGBMRegressor - lgbmr\n",
     "\"\"\"\n",
+    "\n",
+    "\n",
     "xgb_confirmed = XGBRegressor(objective='reg:squarederror', n_estimators=1000, learning_rate=0.01)\n",
-    "xgb_deaths = XGBRegressor(objective='reg:squarederror', n_estimators=1000, learning_rate=0.01)\n",
-    "cbr = catboost.CatBoostRegressor(iterations=1000, learning_rate=0.01)\n",
-    "lgbmr = lightgbm.LGBMRegressor(learning_rate=0.01, n_estimators=1000)\n"
+    "xgb_deaths = XGBRegressor(objective='reg:squarederror', n_estimators=1000, learning_rate=0.01)"
    ]
   },
   {
@@ -1225,9 +1224,7 @@
     }
    ],
    "source": [
-    "\"\"\"Train XGBRegressor. For confirmed cases and deaths\n",
-    "separate models created\n",
-    "\"\"\"\n",
+    "\"\"\"Train XGBRegressor. For confirmed cases and deaths separate models created\"\"\"\n",
     "train_y_xgb_confirmed = train_y[[labels[2]]]\n",
     "train_y_xgb_deaths = train_y[[labels[3]]]\n",
     "xgb_confirmed.fit(train_X, train_y_xgb_confirmed)\n",
