--- a/COVID-2019-Challenge_v.1.0.ipynb
+++ b/COVID-2019-Challenge_v.1.0.ipynb
@@ -41,14 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Loading data for countries and removing unnecesary columns \"\"\"\n",
+    "\"\"\" Loading data and removing unnecesary columns\"\"\"\n",
     "\n",
-    "\n",
-    "countries = pd.read_csv(\"./datasets/countries.csv\")\n",
+    "data_confirmed = pd.read_csv(\"./COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\")\n",
+    "data_deaths = pd.read_csv(\"./COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv\")\n",
+    "data_recovered = pd.read_csv(\"./COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_recovered_global.csv\")\n",
+    "countries = pd.read_csv(\"./countries.csv\")\n",
     "countries.drop(['iso_alpha2', 'iso_numeric', 'name', 'official_name'], axis='columns', inplace=True)"
    ]
   },
@@ -178,13 +180,12 @@
     }
    ],
    "source": [
-    "\"\"\"Loading data for confirmed cases. Grouping data by country, ignoring province.\n",
+    "\"\"\"Grouping confirmed cases data by country, ignoring province.\n",
     "Delete latitude and longtitude columns.\n",
     "Each date must be on a single row.\n",
     "\"\"\"\n",
     "\n",
     "\n",
-    "data_confirmed = pd.read_csv(\"./datasets/COVID-19-master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\")\n",
     "data_confirmed = data_confirmed.groupby('Country/Region').sum()\n",
     "data_confirmed.drop(['Lat', 'Long'], axis='columns', inplace=True)\n",
     "data_confirmed = data_confirmed.iloc[:, 4:].stack().reset_index()\n",
@@ -318,34 +319,17 @@
     }
    ],
    "source": [
-    "\"\"\"Loading data for deaths. Grouping data by country, ignoring province.\n",
+    "\"\"\"Grouping deaths data by country, ignoring province.\n",
     "Delete latitude and longtitude columns.\n",
     "Each date must be on a single row.\n",
     "\"\"\"\n",
     "\n",
     "\n",
-    "data_deaths = pd.read_csv(\"./datasets/COVID-19-master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv\")\n",
     "data_deaths = data_deaths.groupby('Country/Region').sum()\n",
     "data_deaths.drop(['Lat', 'Long'], axis='columns', inplace=True)\n",
     "data_deaths = data_deaths.iloc[:, 4:].stack().reset_index()\n",
     "data_deaths.columns = ['ccse_name', 'date', 'deaths']\n",
     "data_deaths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\" Loading data for quarantines and grouping them by country,\n",
-    "ignoring region level\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "quarantines = pd.read_csv(\"./datasets/quarantine_dates.csv\")\n",
-    "quarantines_proccessed = quarantines.groupby('Country').max().reset_index()\n",
-    "quarantines_proccessed.drop(['Place', 'Level'], axis='columns', inplace=True)"
    ]
   },
   {
@@ -1168,13 +1152,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"This function will be used for plotting prediction \n",
-    "   compare to real counts of cases\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
     "def plot_predictions_valid(model_name, valid_data, features, \n",
     "                     day_start, days, target, country):\n",
+    "    \"\"\"This function will be used for plotting prediction \n",
+    "   compare to real counts of cases\n",
+    "\"\"\"\n",
     "    first_day_of_prediction = pd.to_datetime(day_start)\n",
     "    last_day_of_prediction = pd.to_datetime(day_start) + pd.to_timedelta(days, unit='d')\n",
     "    days = pd.date_range(first_day_of_prediction, last_day_of_prediction)\n",
@@ -1225,6 +1207,8 @@
    ],
    "source": [
     "\"\"\"Train XGBRegressor. For confirmed cases and deaths separate models created\"\"\"\n",
+    "\n",
+    "\n",
     "train_y_xgb_confirmed = train_y[[labels[2]]]\n",
     "train_y_xgb_deaths = train_y[[labels[3]]]\n",
     "xgb_confirmed.fit(train_X, train_y_xgb_confirmed)\n",
@@ -1338,16 +1322,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Function for prediction next day's confirmed cases and deaths.\n",
+    "def predict_next_day(model_confirmed, model_deaths, data, features):\n",
+    "    \"\"\"Function for prediction next day's confirmed cases and deaths.\n",
     "   Arguments:\n",
     "   model_confirmed - model, trained to predict number of confirmed cases next day\n",
     "   model_deaths - model, trained to predict number of deaths next day\n",
     "   data - pandas.DataFrame with all information\n",
     "   features - list, features which model used\n",
     "\"\"\"\n",
-    "\n",
-    "\n",
-    "def predict_next_day(model_confirmed, model_deaths, data, features):\n",
     "    last_date = data['date'].max() \n",
     "    next_date = last_date + pd.to_timedelta(1, unit='d')\n",
     "    prev_data = data[data.date == last_date]\n",
@@ -1369,7 +1351,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Function for prediction number of new cases and deaths \n",
+    "def predict(data, days, model_1, model_2, features):\n",
+    "    \"\"\"Function for prediction number of new cases and deaths \n",
     "   Arguments:\n",
     "   data - pandas.DataFrame with all information\n",
     "   days - array of pandas.datetime objects\n",
@@ -1377,9 +1360,6 @@
     "   model_2 - model for deaths\n",
     "   features - list, features which models used\n",
     "\"\"\"\n",
-    "\n",
-    "\n",
-    "def predict(data, days, model_1, model_2, features):\n",
     "    pred_data = data.copy()\n",
     "    for day in days:\n",
     "        next_data = predict_next_day(model_1, model_2, pred_data, features)\n",
@@ -1413,11 +1393,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Function for constructing plots for predicted data\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
     "def plot_predictions(data, country, target):\n",
+    "    \"\"\"Function for constructing plots for predicted data\"\"\"\n",
     "    plot_data = data[data.country == country]\n",
     "    x = plot_data['date']\n",
     "    y = plot_data[target]\n",
